Push from friday! Fixed some of the broken style properties from our previous UX fixes. Changed aim for t&c page. wrapping to the same window frame was not worth it from a style and usibility perspective Improved the capture points for when the header sticks to the top of the screen Re thought the sequencing project and run pages to better reflect information that the user needs Begun fleshing out the database

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -19,7 +19,7 @@ header {
 
 main {
     width: 100%;
-    padding-bottom: 80px;
+    padding-bottom: 50px;
 }
 
 footer {
@@ -50,12 +50,8 @@ footer {
     color: #f9f9f9;
 }
 
-.brand a {
-    color: inherit;
-    text-decoration: none;
-}
-
 .brand h1 {
+    font-weight: 900;
     line-height: 100px;
     font-size: 80px;
     margin-top: 0;
@@ -63,18 +59,24 @@ footer {
     /*text-transform: uppercase;*/
 }
 
-@media (min-width:992px) {
-    .brand h1 {
-        font-size: 60px;
-    }
+.brand a {
+    color: inherit;
+    text-decoration: none;
 }
 
 .brand p {
+    font-size: 16px;
     font-weight: 500;
     letter-spacing: 8px;
     margin-bottom: 40px;
     margin-top: 0;
     text-transform: uppercase;
+}
+
+@media (max-width: 767px) {
+    .brand {
+        display: none;
+    }
 }
 
 /* Capturable navbar properties */
@@ -208,7 +210,6 @@ body ul .no_bullets {
 }
 
 div.content {
-    padding-bottom: 80px;
     margin-left: 3%;
     margin-right: 3%;
 }
