--- a/app/static/css/terms.css
+++ b/app/static/css/terms.css
@@ -1,34 +1,4 @@
-main {
-    height: 100%;
-}
-
-div.content {
-    height: 100%;
-    /*min-height: 300px;*/
-    margin-bottom: 0;
-}
-
-/*@media (min-width:850px) {*/
-    /*.div.content {*/
-        /*height: calc(90% - (320px + 80px));*/
-    /*}*/
-/*}*/
-
-div.input-table {
-    height: 100%;
-    min-height: 300px;
-}
-
-div.action {
-    height: 100%;
-    min-height: 300px;
-}
-
 div.terms {
-    height: calc(99% - 140px);
-    min-height: 120px;
-    overflow-x: hidden;
-    overflow-y: auto;
     background-color: #FAFAFA;
     border: 2px solid #CCCCCC;
     text-align: left;
